<resources>
    <string name="app_name">Stay healthy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">START-Hack-21</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_training">Training</string>
    <string name="menu_nutrition">Nutrition</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_medicines">Medicines</string>
    <string name="menu_overview">Health Overview</string>
    <string name="menu_insurances">Insurances</string>
    <string name="dashboard">Dashboard</string>
    <string name="suggestions">Suggestions</string>
    <string name="sampleText">SampleText</string>
    <string name="graphs">Graphs</string>
    <string name="todo">TODO</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="pref_view_header">View</string>
    <string name="pref_tracking_header">Tracking</string>
    <string name="pref_account_header">Account</string>

    <!-- View Preferences -->
    <string name="pref_expert_view">Expert View</string>
    <string name="pref_attachment_expert_on">Shows only the basic overview for each category</string>
    <string name="pref_attachment_expert_off">Shows advanced data for each category</string>
    <string name="pref_dark_mode">Dark mode</string>
    <string name="pref_attachment_dark_mode_on">Light mode</string>
    <string name="pref_attachment_dark_mode_off">Dark mode</string>

    <!-- Tracking Preferences -->
    <string name="pref_steps">Steps</string>
    <string name="pref_sleep">Sleep</string>
    <string name="pref_pulse">Pulse</string>
    <string name="pref_pressure">Blood Pressure</string>
    <string name="pref_spo2">SpO2</string>
    <string name="pref_weight">Weight</string>
    <string name="pref_medication">Medication</string>
    <string name="pref_nutrients">Nutrients</string>
    <string name="pref_etc">…</string>

    <!-- Account Preferences -->
    <string name="pref_create_account">Create Account</string>
    <string name="pref_create_account_summary">Create an account to earn bonuses and compete with friends</string>
    <string name="last_week">Last Week</string>
    <string name="current_week">Current Week</string>
    <string name="today">Today</string>
    <string name="activities">Activities</string>
    <string name="footsteps">Footsteps</string>
    <string name="steps">Steps</string>
    <string name="general">General</string>
    <string name="bee_florian">Bee_Florian</string>
    <string name="level_7">Level 7</string>

    <!-- Profile -->
    <string name="friends_name">Name</string>
    <string name="friends_level">Lvl</string>
    <string name="friends">Friends</string>
    <string name="score">Overall score</string>

    <!-- Nutrition -->
    <string name="nutrition">Nutrition score last 7 days</string>
    <string name="nutrition_today">Nutrition today</string>

    <!-- Sleep -->
    <string name="sleeping_history">Sleeping time of last 7 days</string>
    <string name="sleep">Sleeping score</string>

    <!-- Meds -->
    <string name="pills">Daily Pills</string>
    <string name="disease">Diseases</string>



</resources>