<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_nutrition"
            android:title="@string/menu_nutrition" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/menu_activities" />

        <item
            android:id="@+id/nav_medicines"
            android:icon="@drawable/ic_medicines"
            android:title="@string/menu_medicines" />

        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_sleep"
            android:title="@string/menu_sleep" />

        <item
            android:id="@+id/nav_insurances"
            android:icon="@drawable/ic_insurances"
            android:title="@string/menu_insurances" />

    </group>
</menu>