<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.uniks.start_hack_21.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="de.uniks.start_hack_21.ui.activities.ActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_nutrition"
        android:name="de.uniks.start_hack_21.ui.nutrition.NutritionFragment"
        android:label="@string/menu_nutrition"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/nav_medicines"
        android:name="de.uniks.start_hack_21.ui.medicines.MedicinesFragment"
        android:label="@string/menu_medicines"
        tools:layout="@layout/fragment_medicines" />

    <fragment
        android:id="@+id/nav_sleep"
        android:name="de.uniks.start_hack_21.ui.sleep.SleepFragment"
        android:label="@string/menu_sleep"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="de.uniks.start_hack_21.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

</navigation>