<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                cardCornerRadius="4dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/primaryColor" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu_activities"
                    android:textSize="40dp"></TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                cardCornerRadius="4dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/primaryColor" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu_nutrition"
                    android:textSize="40dp"></TextView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                cardCornerRadius="4dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/primaryColor" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu_sleep"
                    android:textSize="40dp"></TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                cardCornerRadius="4dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/primaryColor" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu_medicines"
                    android:textSize="40dp"></TextView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>